--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -1,1 +1,10 @@
-<h1>Ola mundo!</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <img src="" alt="imagem.png">
+        </div>
+        <div class="col-9">
+            <h1>sorteio amigo secreto</h1>
+        </div>
+    </div>
+</div>
