--- a/resources/views/sorteio.pug
+++ b/resources/views/sorteio.pug
@@ -1,20 +1,23 @@
 extends layouts/page
 
 block content 
-    .container 
-        .row.aling-items-end 
+    .container.justify-content-center 
+        h5(class="mt-3")
+            i(class="fa-solid fa-user")
+            |  Adicionar participante
+
         form(class="row align-items-end")
             .col-3.mb-3 
-                label(for="nome", class="form-label") None
+                label(for="nome", class="form-label") Nome
                 input(type="text", class="form-control", name="nome", id="none") 
 
             .col-3.mb-3 
                 label(for="sobrenome", class="form-label") Sobrenome 
                 input(type="text", class="form-control", name="sobrenome", id="sobrenome")
 
-            .col-3.mb-3
+            .col-4.mb-3
                 label(for="email", class="form-label")  E-mail 
                 input(type="email", class="form-control", name="email", id="email")
 
-            .col-3.mb-3 
-                button(type="submit", class="btn btn-primary") Submit
+            .col-2.mb-3 
+                button(type="submit", class="btn btn-primary") + Adicionar!
