--- a/resources/views/sorteio.pug
+++ b/resources/views/sorteio.pug
@@ -20,4 +20,6 @@ block content
                 input(type="email", class="form-control", name="email", id="email")
 
             .col-2.mb-3 
-                button(type="submit", class="btn btn-primary") + Adicionar!
+                button(type="submit", class="btn btn-primary") 
+                    i(class="fa-solid fa-plus")
+                    |  Adicionar!
