--- a/resources/views/sorteio.pug
+++ b/resources/views/sorteio.pug
@@ -6,7 +6,7 @@ block content
             i(class="fa-solid fa-user")
             |  Adicionar participante
 
-        form(class="row align-items-end")
+        form(class="row align-items-end", method='POST' action='/sorteio')
             .col-3.mb-3 
                 label(for="nome", class="form-label") Nome
                 input(type="text", class="form-control", name="nome", id="none") 
@@ -19,7 +19,7 @@ block content
                 label(for="email", class="form-label")  E-mail 
                 input(type="email", class="form-control", name="email", id="email")
 
-            .col-2.mb-3 
+            .col-2.mb-3.text-end 
                 button(type="submit", class="btn btn-primary") 
                     i(class="fa-solid fa-plus")
                     |  Adicionar!
