--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -1,168 +1,112 @@
-/* teste */
-:root {
-    --primary-color: rgb(11, 78, 179);
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
-*,
-*::after,
-*::before {
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
-body {
-    font-family: 'Montserrat', sans-serif;
-    display: grid;
-    place-items: center;
-    min-height: 100vh;
-    background: linear-gradient(to right, #74ebd5, #acb6e5);
+html {
+    height: 100%;
 }
 
-/* General Settings */
-label {
-    display: block;
-    margin-bottom: 0.5rem;
-
+p {
+	color: grey;
 }
 
-input {
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    border: 1px solid #ccc;
-    border-radius: 0.25rem;
-}
-
-.text-center {
-    text-align: center;
-    color: #2c3e50;
-
-}
-
-.with-50 {
-    width: 50%;
-}
-
-.ml-auto {
-    margin-left: auto;
-}
-
-/* Progress */
-.progressbar {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    margin: 2rem 0 04rem 0;
-    counter-reset: step;
-}
-
-.progressbar::before, .progress {
-    content: "";
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 4px;
-    width: 100%;
-    background-color: #dcdcdc;
-}
-
-.progress {
-    background-color: var(--primary-color);
-    width: 0%;
-    transition: 0.3s ease-in-out;
-}
-
-.progress-step {
-    width: 35px;
-    height: 35px;
-    background-color: #dcdcdc;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-}
-
-.progress-step::before {
-    counter-increment: step;
-    content: counter(step)
-}
-
-.progress-step::after {
-    content: attr(data-title);
-    position: absolute;
-    top: calc(100% + 0.5rem);
-    font-size: .80rem;
-    color: #666666;
-}
-
-.progress-step.active {
-    background-color: var(--primary-color);
-    color: #f3f3f3;
-}
-
-/* Form */
-.form {
-    width: clamp(320px, 30%, 430px);
-    margin: 0 auto;
-    border: 1px solid #ccc;
-    border-radius: .35rem;
-    padding: 1.5rem;
-    background-color: #ecf0f1;
-    box-shadow: 2px 4px 11px -1px #000000;
-
-}
-
-.form-step {
+fieldset:not(:first-of-type) {
     display: none;
-    transform-origin: top;
-    animation: animate 0.5s;
 }
 
-@keyframes animate {
-    from{
-        transform: scale(1, 0);
-        opacity: 0;
-    }
-    to {
-        transform: scale(1, 1);
-        opacity: 1;
-    }
+/*FieldSet headings*/
+.fs-title {
+    font-size: 25px;
+    color: #0d6efd;
+    margin-bottom: 15px;
+    font-weight: normal;
+    text-align: left;
 }
 
-.form-step.active {
+/*Step Count*/
+.steps {
+	font-size: 25px;
+    color: gray;
+    margin-bottom: 10px;
+    font-weight: normal;
+    text-align: right;
+}
+
+/*Icon progressbar*/
+#progressbar {
+    margin-bottom: 30px;
+    overflow: hidden;
+    color: lightgrey;
+}
+
+#progressbar .active {
+    color: #0d6efd;
+}
+
+#progressbar li {
+    list-style-type: none;
+    font-size: 15px;
+    width: 25%;
+    float: left;
+    position: relative;
+    font-weight: 400;
+}
+
+/*Icons in the ProgressBar*/
+#progressbar #raffle_name:before {
+    font-family: FontAwesome;
+    content: "\f2b9";
+}
+
+#progressbar #participants:before {
+    font-family: FontAwesome;
+    content: "\f0c0";
+}
+
+#progressbar #restriction:before {
+    font-family: FontAwesome;
+    content: "\f071";
+}
+
+#progressbar #start_raffle:before {
+    font-family: FontAwesome;
+    content: "\f00c";
+}
+
+/*Icon ProgressBar before any progress*/
+#progressbar li:before {
+    width: 50px;
+    height: 50px;
+    line-height: 45px;
     display: block;
+    font-size: 20px;
+    color: #ffffff;
+    background: lightgray;
+    border-radius: 50%;
+    margin: 0 auto 10px auto;
+    padding: 2px;
 }
 
-.input-group {
-    margin: 2rem 0;
+/*ProgressBar connectors*/
+#progressbar li:after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: lightgray;
+    position: absolute;
+    left: 0;
+    top: 25px;
+    z-index: -1;
 }
 
-.btns-group {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem;
+/*Color number of the step and the connector before it*/
+#progressbar li.active:before, #progressbar li.active:after {
+    background: #0d6efd;
 }
 
-/* Buttons */
-.btn {
-    padding: 0.75rem;
-    display: block;
-    text-align: center;
-    text-decoration: none;
-    background-color: var(--primary-color);
-    color: #f3f3f3;
-    border-radius: .25rem;
-    cursor: pointer;
-    transition: all 250ms ease-in-out;
-}
-.btn:active {
-    transform: scale(.98);
-}
-
-.btn:hover {
-    box-shadow: 0 0 0 2px #fff, 0 0 0 3px var(--primary-color);
+/*Fit image in bootstrap div*/
+.fit-image{
+    width: 100%;
+    object-fit: cover;
 }
