--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,17 @@
     outline: 1px solid red;
 }*/
 
+body {
+    display:grid; 
+    grid-template-rows: auto 1fr auto;
+    min-height:100vh;
+}
+
+.box-sorteio {
+    width: 400px;
+    height: 400px;
+}
+
 .img-logo {
     width: 65px;
     height: 65px;
