--- a/resources/views/sorteio.pug
+++ b/resources/views/sorteio.pug
@@ -1,25 +1,88 @@
 extends layouts/page
 
 block content 
-    .container.justify-content-center 
-        h5(class="mt-3")
-            i(class="fa-solid fa-user")
-            |  Adicionar participante
 
-        form(class="row align-items-end", method='POST' action='/sorteio')
-            .col-3.mb-3 
-                label(for="nome", class="form-label") Nome
-                input(type="text", class="form-control", name="nome", id="none") 
+    link(rel="stylesheet" href="form.css")
 
-            .col-3.mb-3 
-                label(for="sobrenome", class="form-label") Sobrenome 
-                input(type="text", class="form-control", name="sobrenome", id="sobrenome")
+    script(src="form.js" defer) 
 
-            .col-4.mb-3
-                label(for="email", class="form-label")  E-mail 
-                input(type="email", class="form-control", name="email", id="email")
+    .container
+        .row.justify-content-center
+            .col-8.text-center.p-0.mt-3.mb-2
+                //-.card.px-0.pt-4.pb-0.mt-3.mb-3
+                ul#progressbar
+                    li#raffle_name.active: strong Nome
+                    li#participants: strong Integrantes
+                    li#restriction: strong Restrições
+                    li#start_raffle: strong Sortear
+    .container
+        fieldset
+            form(action="/sorteio/nome", method="post") 
+                
+                .row.text-start 
+                    .col-7
+                        h2.fs-title Nome do sorteio:
+                    .col-5
+                        h2.steps Etapa 1 - 4
+                .row.justify-content-center
+                    .col-6
+                        label.form-label(for="nome") Escolha um nome para o sorteio
+                        .input-group 
+                            input#nome.form-control(type="text" name="nome")
+                            button.btn.btn-primary(type="submit") Ok!
+            
+            a.btn.btn-danger.float-start.mt-3(href="/") Cancelar
+            button.next.btn.btn-primary.float-end.mt-3(type='button' name='next') Proximo
 
-            .col-2.mb-3.text-end 
-                button(type="submit", class="btn btn-primary") 
-                    i(class="fa-solid fa-plus")
-                    |  Adicionar!
+        fieldset 
+            form(action="", method="post") 
+                .row.text-start  
+                    .col-7
+                        h2.fs-title Adicionar participantes:
+                    .col-5
+                        h2.steps Etapa 2 - 4
+                .row.align-items-end 
+                    .col-3.mb-3 
+                        label.form-label(for="nome") Nome
+                        input.form-control#nome(type="text" required)
+
+                    .col-3.mb-3 
+                        label.form-label(for="sobrenome") Sobrenome
+                        input.form-control#sobrenome(type="text" required)
+
+                    .col-4.mb-3 
+                        label.form-label(for="email") Email
+                        input.form-control#email(type="email" required)
+
+                    .col-2.mb-3.text-end 
+                        button.btn.btn-primary#adicionar(disabled)
+                            i.fa-solid.fa-plus
+                            |  Adicionar!
+                
+            button.next.btn.btn-primary.float-end.mt-3(type='button' name='next') Proximo
+            button.previous.btn.btn-secondary.float-start.mt-3(type='button' name='previous') Anterior
+
+        fieldset 
+        
+            .row.text-start 
+                .col-7
+                    h2.fs-title Filtros de sorteio:
+                .col-5
+                    h2.steps Etapa 3 - 4
+            .text-center
+                a(class="btn btn-primary") Criar Grupo
+
+            button.next.btn.btn-primary.float-end.mt-3(type='button' name='next') Proximo
+            button.previous.btn.btn-secondary.float-start.mt-3(type='button' name='previous') Anterior
+
+        fieldset 
+            .row.text-start
+                .col-7
+                    h2.fs-title Iniciar sorteio:
+                .col-5
+                    h2.steps Etapa 4 - 4
+            .text-center
+                a(class="btn btn-primary") Sortear
+
+            button.next.btn.btn-primary.float-end.mt-3(type="submit" name='next') Enviar
+            button.previous.btn.btn-secondary.float-start.mt-3(type="button" name='previous') Anterior
