--- a/resources/views/partials/header.pug
+++ b/resources/views/partials/header.pug
@@ -21,4 +21,4 @@ header
                 small #{dados.email}
 
             .col-1.b
-                button(type="button", class="btn btn-primary") Sair
+                a(href="/logout", class="btn btn-primary") Sair
