--- a/resources/views/layouts/register.pug
+++ b/resources/views/layouts/register.pug
@@ -19,6 +19,8 @@ html(lang="pt-br")
         title #{title}
 
     body 
+        include ../partials/header.pug
+
         main 
             block content
 
