--- a/views/sorteio.pug
+++ b/views/sorteio.pug
@@ -2,9 +2,9 @@ extends layouts/page
 
 block content 
 
-    link(rel="stylesheet" href="form.css")
+    link(rel="stylesheet" href="/stylesheets/form.css")
 
-    script(src="form.js" defer) 
+    script(src="/javascripts/form.js" defer) 
 
     div.container
         div.row.justify-content-center
