--- a/views/layouts/page.pug
+++ b/views/layouts/page.pug
@@ -19,12 +19,12 @@ html(lang="pt-br")
         title #{title}
 
     body 
-        include ../partials/header.pug
+        include partials/header.pug
 
         main 
             block content 
 
-        include ../partials/footer.pug
+        include partials/footer.pug
         
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js",
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe", crossorigin="anonymous") 
